hphp/test/zend/good/Zend/tests/errmsg_029.php.expectf

Fatal error: Cannot use 'parent' as class name as it is reserved in %s/errmsg_029.php on line 3
